Footer wrap fix FIX: * CSS Footer no estaba incluido en el contenedor principal. Cleanup. * Bootstrap.css minor fixes. FA

--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -99,9 +99,7 @@ a.signup_button {
 footer {
   text-align: center;
   margin-top: 10px;
-  width: 710px;
-  margin-left: auto;
-  margin-right: auto;
+height: 300px;
 }
 
 footer nav {
